[project]
name = "vaultly"
version = "0.1.0"
description = "Declarative Pydantic-native secrets manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
vault = ["hvac>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[ssm]>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyright>=1.1.370",
    "boto3>=1.34",
    "hvac>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*", "hvac", "hvac.*", "moto", "moto.*"]
ignore_missing_imports = true
