[project]
name = "vaultly"
version = "0.1.0"
description = "Declarative Pydantic-native secrets manager"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "cop1cat" }]
keywords = ["secrets", "config", "pydantic", "aws", "ssm", "vault"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/cop1cat/vaultly"
Documentation = "https://cop1cat.github.io/vaultly/"
Repository = "https://github.com/cop1cat/vaultly"
Issues = "https://github.com/cop1cat/vaultly/issues"
Changelog = "https://github.com/cop1cat/vaultly/blob/main/CHANGELOG.md"

[project.optional-dependencies]
aws = ["boto3>=1.34"]
vault = ["hvac>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[ssm]>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyright>=1.1.370",
    "boto3>=1.34",
    "hvac>=2.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
    "mkdocstrings[python]>=0.26",
    "mike>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultly"]

[tool.hatch.build.targets.wheel.force-include]
"src/vaultly/py.typed" = "vaultly/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "hvac",
    "hvac.*",
    "moto",
    "moto.*",
    "requests",
    "requests.*",
]
ignore_missing_imports = true
